# mike_autocal

./: .gitignore  .gitignore.swp  README.md  pyproject.toml
mike_autocal/: autocal.py  dataio.py  measurement_fun.py  mikesimulation.py  objective_fun.py  utils.py
notebooks/: demo.ipynb  example_satellite_altimetry.ipynb  example_satellite_points.ipynb
tests/data/simulation_data_sns/observations/: Altimetry_wl.dfs0  Europlatform_wl.dfs0  F3platform_wl.dfs0  Helgoland_wl.dfs0  J61_wl.dfs0  K141_wl.dfs0  L91_wl.dfs0  Westkapelle_wl.dfs0  ZeebruggeWielingendok_wl.dfs0
tests/data/simulation_data_sns/simulation/: sns_base.m21fm
tests/data/simulation_data_sns/simulation/sns_base.m21fm - Result Files/: waterlevels.dfs0
