[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# location of package relative to the repository root (e.g. alternatively "src/mike_autocal")
# note: the package name 'mike_autocal' can be different from the project name on PyPI
#       the project name (PyPI) is used for pip install, whereas the package name is used for imports
packages = ["mike_autocal"]  

[tool.hatch.build.targets.sdist]
exclude = ["notebooks", "tests", "images"]

[project]
# name on PyPI (e.g. pip install mike_autocal)
name = "mike_autocal"
version = "0.0.1"
dependencies = [
    "mikeio",
    "torch",
    "tensorboard",
    "tqdm",
    "modelskill",
    "optuna>=4.2.1",
    "numpy",
    "psutil",
    "scipy",
    "ipykernel"
]

authors = [
  { name="Clemens Cremer", email="clcr@dhigroup.com" },
  { name="Faro Schäfer", email="fsch@dhigroup.com" },
  { name="Jesper Sandvig Mariegaard", email="jem@dhigroup.com" },
  { name="Henrik Andersson", email="jan@dhigroup.com" },
]

description = "A python library used for automatic calibration of Mike simulations."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 2 - Pre-Alpha",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]

[project.optional-dependencies]
dev = [
  "build",
  "pytest",
  "ruff",
  "mypy",
  "mkdocs",
  "mkdocstrings[python]", 
  "mkdocs-material"
]

test= [
  "pytest",
  "pytest-cov",
  "mypy",
]

notebooks = [
  "jupyter",
]

[project.urls]
"Homepage" = "https://github.com/DHI/mike_autocal"
"Bug Tracker" = "https://github.com/DHI/mike_autocal/issues"

[tool.ruff]
# ignore long lines
lint.ignore = ["E501"]
line-length = 150

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unreachable = false
no_implicit_optional = true
